Working DB integration

--- a/src/main/resources/templates/thymeleaf/recipes-by-label.html
+++ b/src/main/resources/templates/thymeleaf/recipes-by-label.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html >
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Recipes for label</title>
 </head>
 <body>
-<h1>Recipes with label  <span th:text="${label}"></span></h1>
+<h1>Recipes with label <span th:text="${label}"></span></h1>
 <table>
     <thead>
     <tr>
